Added Sigin & Create Repo Sections

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <!--NAVBAR CODE-->
     <div>
-        <nav class="navbar navbar-expand-lg ">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img id="navbar-brand-logo"
@@ -62,21 +62,104 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#intro">Introduction</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link" href="#signin">Signing-in Github</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="#create-repo">Creating New Repository</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
+    <!--Coding of the Blog-->
+    <main>
+        <section id="intro">
+            <div>
+                <p id="intro-para"><b>GitHub</b> is a code hosting platform for collaboration and version control.
 
+                    GitHub lets you (and others) work together on projects.</p>
+                <p>
+                    GitHub essentials are:
+                <ul>
+                    <li>Repositories</li>
+                    <li>Branches</li>
+                    <li>Commit</li>
+                    <li>Git (The version Control Software, Github is built on)</li>
+                </ul>
+                </p>
+                <p>In order to host your Repositories online on github you need to install git on your machine and
+                    signup
+                    on github platform.</p>
+                <ul>
+                    <li>
+                        <p>You can visit Github by <a href="https://github.com/" target="blank"
+                                style="color: yellow; text-decoration: none;">Clicking here ✔</a></p>
+                    </li>
+                    <li>
+                        <p>You can visit Git Website by <a href="https://git-scm.com/" target="blank"
+                                style="color: yellow; text-decoration: none;">Clicking here ✔</a></p>
+                    </li>
+                </ul>
 
+            </div>
+        </section>
+    </main>
+
+    <section id="signin">
+        <div>
+
+            <ul>
+                <li>
+                    <h1>How to Push a Repository on Github</h1>
+                </li>
+                <li>
+                    <h2>Signin to GitHub:</h2>
+                </li>
+            </ul>
+            <p>
+                Click the link above to visit Github website. You will observe the page as shown in image below.
+            </p>
+            <ul>
+                <li>
+                    Click the signin button.
+                </li>
+                <li>
+                    If you are not already registered click signup button.
+                </li>
+
+            </ul>
+            <img src="Images/sign.PNG" alt="intro-page-github" class="page-images">
+
+        </div>
+    </section>
+
+    <section id="create-repo">
+        <div>
+            <ul>
+                <li>
+                    <h2>Creating a new Repository:</h2>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    After logging into the platform click the button at top-right corner and select the option to create
+                    <code><b>new Repository</b></code>.
+                </li>
+                <li>You will be directed to a form as shown below.</li>
+                <li>Enter a name for the Repository you want to create</li>
+                <li>Enter a description about your Repository if you want (Optional)</li>
+                <li>You can choose to make your Repository either to be Public or Private</li>
+                <li>You can choose to initialize your repository with a detailed <code>README</code> document</li>
+                <li>After choosing all required options, click on <code>create repository</code> button</li>
+            </ul>
+            <img src="Images/create-repo-form.PNG" class="page-images">
+
+        </div>
+    </section>
 </body>
 
 </html>
